--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.font-arabic {
+  font-family: 'Cairo', sans-serif;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
